Campos codificados
ajuste por paises